# memonoa-ls

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
client/: package-lock.json  package.json
client/src/: extension.ts
src/: ast.rs  main.rs  range.rs  wakachigaki.rs
src/wakachigaki/: tiny_segmenter_wakachigaki.rs  wakachigaki.rs
