[package]
name = "memonoa-ls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71"}
derive_more = "0.99.17"
maplit = "1.0.2"
serde = {version = "1.0.162", features = ["derive"]}
serde_json = { version = "1.0.96", optional = true}
thiserror = "1.0.40"
tinysegmenter = "0.1.1"
tokio = { version = "1.28.0", features = ["full"]}
tower-lsp = "0.19.0"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.17", features = ["env-filter", "json"]}

[features]
serde_json = ["dep:serde_json"]
